# BroccoliVision_2016

./: .gitignore  CMakeLists.txt  Settings.json  Settings_fake.json  compile.sh  runcmake.sh
Revision1/: Settings.json
Revision1/include/: Histogram.hpp  Median.hpp  RealSense.hpp  stringhack.hpp
Revision1/scripts/: broccolilog.txt
Revision1/src/: main.cpp
include/: Histogram.hpp  LoadedVideo.hpp  Median.hpp  RealSense.hpp  Sliders.hpp  StringHack.hpp  VideoInterface.hpp
scripts/: run_serial.sh  runserv.sh  setexposure.sh
src/: LoadedVideo.cpp  RealSense.cpp  main.cpp
